Add objectives and methodology

--- a/TTC_Bus_Delay_Slides.html
+++ b/TTC_Bus_Delay_Slides.html
@@ -376,6 +376,26 @@ Agam Sanghera, Ashita Diwan, Cheng Zhang, Yichun Liu
 </ul></li>
 </ul>
 </section>
+<section id="objectives" class="slide level2">
+<h2>Objectives</h2>
+<ul>
+<li>Understand the primary causes of bus delays.</li>
+<li>Analyze trends based on data (e.g., time of day, location, type of delay).</li>
+<li>Provide actionable insights to improve service efficiency.</li>
+</ul>
+
+<img data-src="images/objectives.png" class="r-stretch"></section>
+<section id="methodology" class="slide level2">
+<h2>Methodology</h2>
+<p><strong>Data Source:</strong> TTC bus delay logs.</p>
+<p><strong>Techniques Used:</strong></p>
+<ul>
+<li><p>Statistical methods to identify trends and correlations.</p></li>
+<li><p>Data visualization for pattern recognition.</p></li>
+</ul>
+<p><strong>Tools/Software:</strong> Python (Pandas, Matplotlib, Seaborn).</p>
+
+<img data-src="images/methodology.png" class="r-stretch"></section>
 <section>
 <section id="analysis" class="title-slide slide level1 center" style="text-align: center">
 <h1>Analysis</h1>
