adding more analysis

--- a/TTC_Bus_Delay_Slides.html
+++ b/TTC_Bus_Delay_Slides.html
@@ -411,23 +411,22 @@ Agam Sanghera, Ashita Diwan, Cheng Zhang, Yichun Liu
 </section>
 <section id="analysis-loading-and-preprocessing-data" class="slide level2">
 <h2>Analysis: Loading and Preprocessing Data</h2>
-<div>
 <ul>
-<li class="fragment">Handle missing values</li>
-<li class="fragment">Convert to appropriate datatypes <img data-src="images/data_conversion.png" class="absolute" style="top: 225px; right: 30px; "></li>
-<li class="fragment">Performed feature selection</li>
+<li><p>Handle missing values</p></li>
+<li><p>Convert to appropriate datatypes <img data-src="images/data_conversion.png" class="absolute" style="top: 225px; right: 30px; "></p></li>
 </ul>
-</div>
 </section>
-<section id="analysis-visualization" class="slide level2">
-<h2>Analysis: Visualization</h2>
-<div>
-<ul>
-<li class="fragment">Analyze distribution of delays</li>
-<li class="fragment">Identify top routes and locations with frequent delay incidents</li>
-<li class="fragment">Visualize delays based on day and incident type</li>
-</ul>
-</div>
+<section id="analyze-distribution-of-delays" class="slide level2">
+<h2>Analyze distribution of delays</h2>
+
+<img data-src="notebooks/delay_dist.png" class="quarto-figure quarto-figure-center r-stretch"></section>
+<section id="identify-top-routes-and-locations-with-frequent-delay-incidents" class="slide level2">
+<h2>Identify top routes and locations with frequent delay incidents</h2>
+
+<img data-src="notebooks/top20_delay_routes.png" class="quarto-figure quarto-figure-center r-stretch"></section>
+<section id="visualize-delays-based-on-day-and-incident-type" class="slide level2">
+<h2>Visualize delays based on day and incident type</h2>
+<p><img data-src="notebooks/chart_month.png" class="quarto-figure quarto-figure-left" width="500" height="550"> <img data-src="notebooks/chart_incident.png" class="quarto-figure quarto-figure-right" width="500" height="500"></p>
 </section>
 <section id="analysis-modelling" class="slide level2">
 <h2>Analysis: Modelling</h2>
