--- a/TTC_Bus_Delay_Slides.html
+++ b/TTC_Bus_Delay_Slides.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<script src="TTC_Bus_Delay_Slides_files/libs/clipboard/clipboard.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script><script src="TTC_Bus_Delay_Slides_files/libs/clipboard/clipboard.min.js"></script>
 <script src="TTC_Bus_Delay_Slides_files/libs/quarto-html/tabby.min.js"></script>
 <script src="TTC_Bus_Delay_Slides_files/libs/quarto-html/popper.min.js"></script>
 <script src="TTC_Bus_Delay_Slides_files/libs/quarto-html/tippy.umd.min.js"></script>
@@ -320,6 +320,9 @@
       margin-right: 0; 
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==" crossorigin="anonymous"></script>
+  
+  <script type="application/javascript">define('jquery', [],function() {return window.jQuery;})</script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
@@ -412,9 +415,130 @@ Agam Sanghera, Ashita Diwan, Cheng Zhang, Yichun Liu
 <section id="analysis-loading-and-preprocessing-data" class="slide level2">
 <h2>Analysis: Loading and Preprocessing Data</h2>
 <ul>
-<li><p>Handle missing values</p></li>
-<li><p>Convert to appropriate datatypes <img data-src="images/data_conversion.png" class="absolute" style="top: 225px; right: 30px; "></p></li>
+<li>Handle missing values // … existing code …</li>
 </ul>
+</section>
+<section id="analysis-loading-and-preprocessing-data-1" class="slide level2">
+<h2>Analysis: Loading and Preprocessing Data</h2>
+<ul>
+<li>Handle missing values</li>
+<li>Convert to appropriate datatypes <img data-src="images/data_conversion.png" class="absolute" style="top: 225px; right: 30px; "></li>
+</ul>
+<div class="cell" data-execution_count="1">
+<div id="tbl-ttc_head" class="cell quarto-float quarto-figure quarto-figure-center" data-output-location="column-fragment" data-execution_count="1">
+<figure class="quarto-float quarto-float-tbl">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-ttc_head-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Table&nbsp;1: Snippet of TTC bus delay data
+</figcaption>
+<div aria-describedby="tbl-ttc_head-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="cell-output cell-output-display" data-execution_count="1">
+<div>
+<style scoped="">
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+
+<table class="dataframe do-not-create-environment cell caption-top" data-quarto-postprocess="true" data-border="1">
+<thead>
+<tr class="header" style="text-align: right;">
+<th data-quarto-table-cell-role="th"></th>
+<th data-quarto-table-cell-role="th">Date</th>
+<th data-quarto-table-cell-role="th">Route</th>
+<th data-quarto-table-cell-role="th">Time</th>
+<th data-quarto-table-cell-role="th">Day</th>
+<th data-quarto-table-cell-role="th">Location</th>
+<th data-quarto-table-cell-role="th">Incident</th>
+<th data-quarto-table-cell-role="th">Min Delay</th>
+<th data-quarto-table-cell-role="th">Min Gap</th>
+<th data-quarto-table-cell-role="th">Direction</th>
+<th data-quarto-table-cell-role="th">Vehicle</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td data-quarto-table-cell-role="th">0</td>
+<td>2024-01-01</td>
+<td>89</td>
+<td>02:08</td>
+<td>Monday</td>
+<td>KEELE AND GLENLAKE</td>
+<td>Vision</td>
+<td>10</td>
+<td>20</td>
+<td>N</td>
+<td>7107</td>
+</tr>
+<tr class="even">
+<td data-quarto-table-cell-role="th">1</td>
+<td>2024-01-01</td>
+<td>39</td>
+<td>02:30</td>
+<td>Monday</td>
+<td>FINCH STATION</td>
+<td>General Delay</td>
+<td>20</td>
+<td>40</td>
+<td>NaN</td>
+<td>8914</td>
+</tr>
+<tr class="odd">
+<td data-quarto-table-cell-role="th">2</td>
+<td>2024-01-01</td>
+<td>300</td>
+<td>03:13</td>
+<td>Monday</td>
+<td>BLOOR AND MANNING</td>
+<td>General Delay</td>
+<td>0</td>
+<td>0</td>
+<td>NaN</td>
+<td>8562</td>
+</tr>
+<tr class="even">
+<td data-quarto-table-cell-role="th">3</td>
+<td>2024-01-01</td>
+<td>65</td>
+<td>03:23</td>
+<td>Monday</td>
+<td>PARLIAMENT AND BLOOR</td>
+<td>Security</td>
+<td>0</td>
+<td>0</td>
+<td>N</td>
+<td>8574</td>
+</tr>
+<tr class="odd">
+<td data-quarto-table-cell-role="th">4</td>
+<td>2024-01-01</td>
+<td>113</td>
+<td>03:37</td>
+<td>Monday</td>
+<td>MAIN STATION</td>
+<td>Security</td>
+<td>0</td>
+<td>0</td>
+<td>NaN</td>
+<td>8541</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+</figure>
+</div>
+</div>
+<p>// … rest of existing code … - Convert to appropriate datatypes <img data-src="images/data_conversion.png" class="absolute" style="top: 225px; right: 30px; "></p>
 </section>
 <section id="analyze-distribution-of-delays" class="slide level2">
 <h2>Analyze distribution of delays</h2>
